# wxpath

./: .gitignore  CHANGELOG.md  FRONTIER_ROADMAP.md  README.md  pyproject.toml  tox.ini
benchmarks/: README.md  __init__.py  __main__.py  cli.py  collectors.py  driver.py  meta.py  metrics.py  report.py  runner.py  server.py  workload.py
benchmarks/corpora/: README.md  docs_python_seed.txt
benchmarks/workloads/: anti_bot.yaml  cc_sample.yaml  freshness.yaml  local_fixture.yaml  single_host.yaml  thousand_host.yaml
design/: M1-pluggable-frontier.md  M2-priority-scheduling.md  M3-declarative-scoring.md  M4-link-provenance.md  M4b-trap-detection.md  M5-hybrid-scorer.md  M6-canonicalization.md
docs/api/integrations/: langchain.md
docs/tui/: index.md  quickstart.md
src/wxpath/: patches.py  settings.py  tui.py  tui_settings.py
src/wxpath/core/: dom.py  exceptions.py  models.py  ops.py  parser.py
src/wxpath/core/runtime/: __init__.py  engine.py  progress.py
src/wxpath/http/client/: crawler.py
src/wxpath/http/frontier/: __init__.py  base.py  canonical.py  embedders.py  fingerprint.py  memory.py  redis.py  scoring.py  sqlite.py  trap.py
tests/: conftest.py
tests/benchmarks/: test_collectors.py  test_local_fixture.py  test_runner_smoke.py  test_workload.py
tests/core/: test_dom.py  test_exceptions.py  test_ops.py  test_parser.py  test_patches.py  test_patches_exceptions.py
tests/core/runtime/: test_engine.py  test_engine_exception_handling.py  test_engine_frontier_parity.py  test_engine_teardown.py  test_progress.py  test_safe_iterator.py
tests/http/frontier/: test_canonical.py  test_canonical_frontier.py  test_factory.py  test_fingerprint.py  test_frontier_contract.py  test_scoring.py  test_segments_pickle.py  test_sqlite_resume.py  test_trap.py  test_trap_frontier.py
tests/tui/: test_progress_adapter.py  test_tui_app.py  test_tui_components.py  test_tui_settings.py
