[build-system]
requires = ["setuptools>=61.0", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wxpath"
version = "0.5.2"
description = "wxpath - a declarative web crawler and data extractor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rodrigo Palacios", email = "rodrigopala91@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "lxml>=4.0",
    "elementpath>=5.0.0,<=5.0.3",
    "aiohttp>=3.8.0,<=4.0.0",
    "tqdm>=4.0.0"
]

[project.urls]
Homepage = "https://rodricios.github.io/wxpath"
Documentation = "https://rodricios.github.io/wxpath"
Repository = "https://github.com/rodricios/wxpath"
Issues = "https://github.com/rodricios/wxpath/issues"
Changelog = "https://github.com/rodricios/wxpath/blob/main/CHANGELOG.md"


[project.optional-dependencies]
cache = ["aiohttp-client-cache>=0.14.0"]
cache-sqlite   = ["aiohttp-client-cache[sqlite]"]
cache-redis    = ["aiohttp-client-cache[redis]"]

# langchain langchain-ollama langchain-chroma chromadb
llm = ["langchain>=1.0.0", "langchain-core>=1.0.0", "langchain-ollama>=1.0.0", 
       "langchain-community>=0.4.0", "langchain-chroma>=1.0.0", "chromadb>=1.0.0",
       "langchain-text-splitters>=1.1.0"]

test = ["pytest>=7.0", "pytest-asyncio>=0.23"]
dev = ["ruff", "tox"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0", "mkdocstrings[python]>=0.24", "mkdocs-macros-plugin>=1.0", "mkdocs-resize-images>=1.0", "mkdocs-glightbox", "pyyaml>=6.0"]
tui = ["textual>=1.0.0", "aiohttp-client-cache>=0.14.0", "aiohttp-client-cache[sqlite]"]
bench = ["pyyaml>=6.0", "datasketch>=1.6", "numpy>=1.24"]
frontier-redis = ["redis>=5.0"]
# M5: opt-in semantic frontier scorer (reference embedder). Core stays ML-free;
# this extra is imported only when http.client.frontier.scorer == "semantic".
semantic = ["sentence-transformers>=2.2", "numpy>=1.24"]

[project.scripts]
wxpath = "wxpath.cli:main"
wxpath-tui = "wxpath.tui:main"
wxpath-bench = "benchmarks.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools]
# Two roots: src/ for wxpath, repo root for benchmarks. Each root has its own
# explicit include to avoid setuptools picking up stale or sibling directories
# (e.g. tests/, docs/, or pre-refactor leftovers at the repo top level).
packages = [
    "wxpath",
    "wxpath.core",
    "wxpath.core.runtime",
    "wxpath.hooks",
    "wxpath.http",
    "wxpath.http.client",
    "wxpath.http.policy",
    "wxpath.integrations",
    "wxpath.integrations.langchain",
    "wxpath.util",
    "benchmarks",
]

[tool.setuptools.package-dir]
wxpath = "src/wxpath"
"wxpath.core" = "src/wxpath/core"
"wxpath.core.runtime" = "src/wxpath/core/runtime"
"wxpath.hooks" = "src/wxpath/hooks"
"wxpath.http" = "src/wxpath/http"
"wxpath.http.client" = "src/wxpath/http/client"
"wxpath.http.policy" = "src/wxpath/http/policy"
"wxpath.integrations" = "src/wxpath/integrations"
"wxpath.integrations.langchain" = "src/wxpath/integrations/langchain"
"wxpath.util" = "src/wxpath/util"
benchmarks = "benchmarks"

[tool.setuptools.package-data]
benchmarks = ["workloads/*.yaml", "corpora/*.txt", "corpora/README.md", "README.md"]

[tool.ruff]
target-version = "py310"
line-length = 100

lint.select = [
    "F",      # pyflakes (unused vars, undefined names, etc.)
    "E",      # pycodestyle errors
    "B",      # flake8-bugbear (real footguns)
    "ASYNC",  # async/await correctness
    "I",      # isort rules
    "TID",    # Tidy imports
    "ICN",    # Import conventions
]

[tool.ruff.format]
quote-style = "single"
